# devops_uc3m

./: .gitignore
P2/: README.md  devops_p2.csv  (+2 more)
P3/Adrian/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
P3/Adrian/alembic/: env.py
P3/Adrian/app/: main.py
P3/Adrian/app/domain/models/: ticket.py  user.py
P3/Adrian/app/domain/services/: ticket_service.py  user_service.py
P3/Adrian/app/infrastructure/database/: session.py
P3/Adrian/app/infrastructure/repositories/: ticket_repository.py  user_repository.py
P3/Adrian/app/presentation/api/: tickets.py  users.py
P3/Adrian/app/presentation/schemas/: ticket_schemas.py  user_schemas.py
P3/Adrian/tests/: test_ticket_creation.py
P3/Adrian/ticket_management_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
P3/Xiuyi/ticket-management-fastapi/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
P3/Xiuyi/ticket-management-fastapi/alembic/: env.py  script.py.mako
P3/Xiuyi/ticket-management-fastapi/src/ticket_management/: __init__.py  main.py
P3/Xiuyi/ticket-management-fastapi/src/ticket_management/core/: config.py
P3/Xiuyi/ticket-management-fastapi/src/ticket_management/db/: __init__.py  session.py
P3/Xiuyi/ticket-management-fastapi/src/ticket_management/repositories/: __init__.py  ticket_repository.py  user_repository.py
P3/Xiuyi/ticket-management-fastapi/src/ticket_management/schemas/: ticket.py  user.py
P3/Xiuyi/ticket-management-fastapi/tests/: conftest.py  test_tickets.py  test_users.py
(+103 files in other folders)
