[tool.poetry]
name = "ticket-management-fastapi"
version = "0.1.0"
description = "A ticket management application using FastAPI following Clean Architecture principles."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
sqlalchemy = "^1.4.27"
pydantic = "^1.8.2"
alembic = "^1.7.5"
asyncpg = "^0.24.0"
pytest = "^6.2.5"
httpx = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"